# lv2

./: .gitignore  Cargo.toml  Makefile
examples/: eg_amp_rust.rs
examples/eg-amp/: Cargo.toml  build.sh  eg-amp.ttl  manifest.ttl
examples/eg-sampler/: Cargo.toml  build.sh  conrod_window.rs  manifest.ttl  sampler.ttl  sampler_ui.rs
examples/eg-sampler/plugin/: Cargo.toml  sampler.rs
examples/eg-sampler/ui/: Cargo.toml  conrod_window.rs  sampler_ui.rs
examples/rust-amp/: Cargo.toml  build.rs  build.sh  rust-amp.rs
ontology/: README.md  dct.ttl  doap.ttl  foaf.ttl  lv2core.ttl  owl.ttl  ui.ttl  xsd.ttl
src/: core.rs  lib.rs  myutils.rs  port.rs  turtle.rs  ui.rs
src/ontology/: README.md  mod.rs
src/ontology/classes/: dbug.rs  dcs.rs  dct.rs  dcterms.rs  doap.rs  extui.rs  foaf.rs  lv2.rs  mod.rs  owl.rs  rdf.rs  rdfs.rs  ui.rs  xsd.rs
src/ontology/properties/: dct.rs  dcterms.rs  doap.rs  foaf.rs  lv2.rs  mod.rs  owl.rs  rdf.rs  rdfs.rs  ui.rs  xsd.rs
src/ttl/: builder.rs  def.rs  gen.rs  mod.rs  parse.rs
