[package]
name = "lv2"
version = "0.3.0"
authors = ["poidl <hoitaus@gmail.com>"]
description = "Minimal LV2 interface for Rust"

# These URLs point to more information about the repository.
documentation = "https://docs.rs/lv2/0.3.0/lv2/"
homepage = "https://github.com/poidl/lv2"
repository = "https://github.com/poidl/lv2"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["lv2"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "ISC"

[dependencies]
libc = "0.2"
# rome = { version = "0.1", path = "../rome" }
lv2_raw = { version = "0.3.0", path = "../lv2_raw" }
Inflector = "*"
